Added ThreadMan to Windows build

--- a/RTEA.vcxproj.filters
+++ b/RTEA.vcxproj.filters
@@ -108,9 +108,6 @@
     <ClInclude Include="managers\FrameMan.h">
       <Filter>Managers</Filter>
     </ClInclude>
-    <ClInclude Include="managers\ThreadMan.h">
-      <Filter>Managers</Filter>
-    </ClInclude>
     <ClInclude Include="Managers\LuaMan.h">
       <Filter>Managers</Filter>
     </ClInclude>
@@ -627,6 +624,9 @@
     <ClInclude Include="Managers\ThreadMan.h">
       <Filter>Managers</Filter>
     </ClInclude>
+    <ClInclude Include="Managers\ThreadMan.h">
+      <Filter>Managers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="System\Box.cpp">
@@ -678,9 +678,6 @@
       <Filter>Managers</Filter>
     </ClCompile>
     <ClCompile Include="managers\FrameMan.cpp">
-      <Filter>Managers</Filter>
-    </ClCompile>
-    <ClCompile Include="managers\ThreadMan.cpp">
       <Filter>Managers</Filter>
     </ClCompile>
     <ClCompile Include="Managers\LuaMan.cpp">
@@ -1184,24 +1181,6 @@
     </ClCompile>
     <ClCompile Include="System\glad\gl.c">
       <Filter>System\glad</Filter>
-    </ClCompile>
-    <ClCompile Include="System\GLCheck.cpp">
-      <Filter>System</Filter>
-    </ClCompile>
-    <ClCompile Include="external\sources\tracy\public\TracyClient.cpp">
-      <Filter>external\tracy</Filter>
-    </ClCompile>
-    <ClCompile Include="Entities\AEJetpack.cpp">
-      <Filter>Entities</Filter>
-    </ClCompile>
-    <ClCompile Include="Menus\SaveLoadMenuGUI.cpp">
-      <Filter>GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="System\Base64\base64.cpp">
-      <Filter>System\Base64</Filter>
-    </ClCompile>
-    <ClCompile Include="System\AllegroTools.cpp">
-      <Filter>System</Filter>
     </ClCompile>
     <ClCompile Include="Managers\ThreadMan.cpp">
       <Filter>Managers</Filter>
