--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -125,7 +125,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          brew install pkg-config sdl2 minizip lz4 flac luajit lua@5.1 libpng libtbb ninja meson
+          brew install pkg-config sdl2 minizip lz4 flac luajit lua@5.1 libpng tbb ninja meson
 
       - name: Build
         env:
