Probably fix meson build

--- a/meson.build
+++ b/meson.build
@@ -121,6 +121,7 @@ source_inc_dirs = include_directories(
   'Activities',
   'Entities',
   'GUI',
+  'GUI/Wrappers',
   'Lua',
   'Managers',
   'Menus',
