VS being stupid and didn't save changes to filters (followup to d70ab199be5c1d63b9e56f36f85f69237db58089)

--- a/RTEA.vcxproj.filters
+++ b/RTEA.vcxproj.filters
@@ -31,6 +31,9 @@
     <Filter Include="System\glad">
       <UniqueIdentifier>{767bbe15-b790-48a2-89dc-4d0f36143c71}</UniqueIdentifier>
     </Filter>
+    <Filter Include="GUI\Wrappers">
+      <UniqueIdentifier>{14ff3fdb-4366-4bed-8b6e-ddcf72987b81}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="System\Box.h">
@@ -113,15 +116,6 @@
     </ClInclude>
     <ClInclude Include="Managers\UInputMan.h">
       <Filter>Managers</Filter>
-    </ClInclude>
-    <ClInclude Include="GUI\AllegroBitmap.h">
-      <Filter>GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="GUI\AllegroInput.h">
-      <Filter>GUI</Filter>
-    </ClInclude>
-    <ClInclude Include="GUI\AllegroScreen.h">
-      <Filter>GUI</Filter>
     </ClInclude>
     <ClInclude Include="GUI\GUI.h">
       <Filter>GUI</Filter>
@@ -561,6 +555,15 @@
     <ClInclude Include="System\GenericSavedData.h">
       <Filter>System</Filter>
     </ClInclude>
+    <ClInclude Include="GUI\Wrappers\GUIInputWrapper.h">
+      <Filter>GUI\Wrappers</Filter>
+    </ClInclude>
+    <ClInclude Include="GUI\Wrappers\AllegroScreen.h">
+      <Filter>GUI\Wrappers</Filter>
+    </ClInclude>
+    <ClInclude Include="GUI\Wrappers\AllegroBitmap.h">
+      <Filter>GUI\Wrappers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="System\Box.cpp">
@@ -637,15 +640,6 @@
     </ClCompile>
     <ClCompile Include="Managers\UInputMan.cpp">
       <Filter>Managers</Filter>
-    </ClCompile>
-    <ClCompile Include="GUI\AllegroBitmap.cpp">
-      <Filter>GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="GUI\AllegroInput.cpp">
-      <Filter>GUI</Filter>
-    </ClCompile>
-    <ClCompile Include="GUI\AllegroScreen.cpp">
-      <Filter>GUI</Filter>
     </ClCompile>
     <ClCompile Include="GUI\GUIBanner.cpp">
       <Filter>GUI</Filter>
@@ -1091,6 +1085,15 @@
     </ClCompile>
     <ClCompile Include="System\SpatialPartitionGrid.cpp">
       <Filter>System</Filter>
+    </ClCompile>
+    <ClCompile Include="GUI\Wrappers\GUIInputWrapper.cpp">
+      <Filter>GUI\Wrappers</Filter>
+    </ClCompile>
+    <ClCompile Include="GUI\Wrappers\AllegroScreen.cpp">
+      <Filter>GUI\Wrappers</Filter>
+    </ClCompile>
+    <ClCompile Include="GUI\Wrappers\AllegroBitmap.cpp">
+      <Filter>GUI\Wrappers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
