no hardcoded linkers. bfd works fine

--- a/meson.build
+++ b/meson.build
@@ -158,7 +158,7 @@ deps += [allegro_dep, loadpng_dep, luabind_dep, raknet_dep]
 cccpelf = executable(
   elfname, ['Main.cpp', sources], include_directories:[source_inc_dirs, external_inc_dirs], cpp_pch:pch, # Sources options
   link_with:external_libs, objects:[external_objects], dependencies:deps,                                # Link options
-  cpp_args:[extra_args, preprocessor_flags], link_args:['-fuse-ld=gold',link_args], build_rpath:build_rpath,               # Compiler setup
+  cpp_args:[extra_args, preprocessor_flags], link_args:[link_args], build_rpath:build_rpath,               # Compiler setup
   name_suffix:suffix,   # Executable name options
   build_by_default:true, # Meson options
   install: true, install_rpath: install_rpath, install_dir: get_option('install_runner') ? get_option('libdir')/'CortexCommand' : get_option('bindir'),
